// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout|Arrangement Inlining elements 1`] = `
.emotion-7 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-6 > * {
  display: inline;
  white-space: nowrap;
  margin-right: 0.5rem;
}

@media (min-width:768px) {
  .emotion-6 > * {
    margin-right: 1rem;
  }
}

.emotion-6 > *:last-child {
  margin-right: 0;
}

.emotion-0 {
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-6"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <div
      className="emotion-0"
    >
      full width row 1
    </div>
    <div
      className="emotion-0"
    >
      full width row 2
    </div>
    <div
      className="emotion-0"
    >
      full width row 3
    </div>
    <div
      className="emotion-0"
    >
      full width row 4
    </div>
    <div
      className="emotion-0"
    >
      full width row 5
    </div>
    <div
      className="emotion-0"
    >
      full width row 6
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Arrangement Stacking elements 1`] = `
.emotion-7 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-6 > * {
  margin-bottom: 0.5rem;
}

@media (min-width:768px) {
  .emotion-6 > * {
    margin-bottom: 1rem;
  }
}

.emotion-6 > *:last-child {
  margin-bottom: 0;
}

.emotion-0 {
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-6"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <div
      className="emotion-0"
    >
      full width row 1
    </div>
    <div
      className="emotion-0"
    >
      full width row 2
    </div>
    <div
      className="emotion-0"
    >
      full width row 3
    </div>
    <div
      className="emotion-0"
    >
      full width row 4
    </div>
    <div
      className="emotion-0"
    >
      full width row 5
    </div>
    <div
      className="emotion-0"
    >
      full width row 6
    </div>
  </div>
</div>
`;
